// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ambiguity 1`] = `
Array [
  Object {
    "info": Object {
      "description": "あいまいなパターンが無いと良い",
      "id": "ambiguity",
      "notice": "「shi」や「si」は h を入れるかどうかを覚えにくい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "含まれていない",
      "rank": "S",
    },
  },
  Object {
    "info": Object {
      "description": "あいまいなパターンが無いと良い",
      "id": "ambiguity",
      "notice": "「shi」や「si」は h を入れるかどうかを覚えにくい。",
    },
    "result": Object {
      "hints": Array [
        Object {
          "last": 4,
          "message": "si≒shi",
          "start": 2,
        },
      ],
      "message": "含まれている",
      "rank": "A",
    },
  },
]
`;

exports[`length_long 1`] = `
Array [
  Object {
    "info": Object {
      "description": "長すぎないと良い",
      "id": "length_long",
      "notice": "表示しやすい。覚えやすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "6文字以下である",
      "rank": "S",
    },
  },
  Object {
    "info": Object {
      "description": "長すぎないと良い",
      "id": "length_long",
      "notice": "表示しやすい。覚えやすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "7文字以上10文字以下である",
      "rank": "A",
    },
  },
  Object {
    "info": Object {
      "description": "長すぎないと良い",
      "id": "length_long",
      "notice": "表示しやすい。覚えやすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "10文字以上20文字以下である",
      "rank": "B",
    },
  },
  Object {
    "info": Object {
      "description": "長すぎないと良い",
      "id": "length_long",
      "notice": "表示しやすい。覚えやすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "21文字以上である",
      "rank": "C",
    },
  },
]
`;

exports[`length_short 1`] = `
Array [
  Object {
    "info": Object {
      "description": "短すぎないと良い",
      "id": "length_short",
      "notice": "5文字以下だと登録できないサイトがある。",
    },
    "result": Object {
      "hints": Array [],
      "message": "6文字以上である",
      "rank": "S",
    },
  },
  Object {
    "info": Object {
      "description": "短すぎないと良い",
      "id": "length_short",
      "notice": "5文字以下だと登録できないサイトがある。",
    },
    "result": Object {
      "hints": Array [],
      "message": "4,5文字である",
      "rank": "A",
    },
  },
  Object {
    "info": Object {
      "description": "短すぎないと良い",
      "id": "length_short",
      "notice": "5文字以下だと登録できないサイトがある。",
    },
    "result": Object {
      "hints": Array [],
      "message": "3文字以下である",
      "rank": "C",
    },
  },
]
`;

exports[`sign_count 1`] = `
Array [
  Object {
    "info": Object {
      "description": "記号が少ないと良い",
      "id": "sign_count",
      "notice": "記号はユーザ名に使えない事が多い。ドメイン名やURLで使えないことが多い。",
    },
    "result": Object {
      "hints": Array [],
      "message": "入っていない",
      "rank": "S",
    },
  },
  Object {
    "info": Object {
      "description": "記号が少ないと良い",
      "id": "sign_count",
      "notice": "記号はユーザ名に使えない事が多い。ドメイン名やURLで使えないことが多い。",
    },
    "result": Object {
      "hints": Array [
        Object {
          "last": 1,
          "message": "記号",
          "start": 1,
        },
      ],
      "message": "1個ある",
      "rank": "A",
    },
  },
  Object {
    "info": Object {
      "description": "記号が少ないと良い",
      "id": "sign_count",
      "notice": "記号はユーザ名に使えない事が多い。ドメイン名やURLで使えないことが多い。",
    },
    "result": Object {
      "hints": Array [
        Object {
          "last": 2,
          "message": "記号",
          "start": 2,
        },
        Object {
          "last": 5,
          "message": "記号",
          "start": 5,
        },
      ],
      "message": "2個ある",
      "rank": "B",
    },
  },
  Object {
    "info": Object {
      "description": "記号が少ないと良い",
      "id": "sign_count",
      "notice": "記号はユーザ名に使えない事が多い。ドメイン名やURLで使えないことが多い。",
    },
    "result": Object {
      "hints": Array [
        Object {
          "last": 1,
          "message": "記号",
          "start": 1,
        },
        Object {
          "last": 2,
          "message": "記号",
          "start": 2,
        },
        Object {
          "last": 3,
          "message": "記号",
          "start": 3,
        },
      ],
      "message": "3個以上ある",
      "rank": "C",
    },
  },
]
`;

exports[`string_order 1`] = `
Array [
  Object {
    "info": Object {
      "description": "名前順が早いと良い",
      "id": "string_order",
      "notice": "リストアップで上に出やすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "eより前である",
      "rank": "S",
    },
  },
  Object {
    "info": Object {
      "description": "名前順が早いと良い",
      "id": "string_order",
      "notice": "リストアップで上に出やすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "e以降かつlより前である",
      "rank": "A",
    },
  },
  Object {
    "info": Object {
      "description": "名前順が早いと良い",
      "id": "string_order",
      "notice": "リストアップで上に出やすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "l以降かつsより前である",
      "rank": "B",
    },
  },
  Object {
    "info": Object {
      "description": "名前順が早いと良い",
      "id": "string_order",
      "notice": "リストアップで上に出やすい。",
    },
    "result": Object {
      "hints": Array [],
      "message": "s以降である",
      "rank": "C",
    },
  },
]
`;
